# Projects

./: .gitignore  CMakeLists.txt  README.md  README.txt  manage.py
AILib/Cluster/: CTestTestfile.cmake  Makefile  cmake_install.cmake
AILib/Cluster/ClusterAlgorithms/: CMakeLists.txt  Makefile  cmake_install.cmake
AILib/Cluster/ClusterAlgorithms/Source/: ClusterAlgorithmsCallers.cpp
AILib/Cluster/Cluster_2_0/: Makefile  cmake_install.cmake
AILib/Cluster/TestCluster/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_cluster
AILib/NeuralNetworks/: CMakeLists.txt
AILib/NeuralNetworks/NeuralNetwork/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
AILib/NeuralNetworks/NeuralNetwork/TestNeuralNetwork/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  run.sh  test_neural_network
AILib/NeuralNetworks/NeuralNetwork/TestNeuralNetwork/Genetics/: Quaternary.txt
AILib/NeuralNetworks/NeuralNetwork/TestNeuralNetwork/Results/: 2013-02-11-performance_metrics_2.ods
MLProjects/: CMakeLists.txt
MLProjects/MathLib/Matrix/: CMakeLists.txt
MLProjects/MathLib/Random/: CMakeLists.txt
MLProjects/MathLib/Statistics/: CMakeLists.txt
MathLib/ActivationFunctions/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
MathLib/ActivationFunctions/TestActivationFunctions/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  plot.gnu  test_activation_functions
MathLib/Fourier/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
MathLib/Fourier/Fourier/: CTestTestfile.cmake  Makefile  cmake_install.cmake
MathLib/Fourier/TestFourier/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_fourier
MathLib/Matrix/: CTestTestfile.cmake  Makefile  cmake_install.cmake
MathLib/Matrix/Matrix/: Makefile  cmake_install.cmake
MathLib/Matrix/TestMatrix/: CTestTestfile.cmake  Makefile  cmake_install.cmake  results.txt  test_matrix
MathLib/Metrics/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
MathLib/Metrics/Levenshtein/: Levenshtein.py
MathLib/Metrics/Metrics/: CTestTestfile.cmake  Makefile  cmake_install.cmake
MathLib/Metrics/TestMetrics/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_metrics
MathLib/Random/: CTestTestfile.cmake  Makefile  cmake_install.cmake
MathLib/Random/Random/: CMakeLists.txt  Makefile  cmake_install.cmake
MathLib/Random/Random/Source/: RandomCallers.cpp
MathLib/Random/TestRandom/: CTestTestfile.cmake  Makefile  cmake_install.cmake  run.sh  test_random
MathLib/Statistics/: CTestTestfile.cmake  Makefile  cmake_install.cmake
MathLib/Statistics/Statistics/: CMakeLists.txt  Makefile  cmake_install.cmake
MathLib/Statistics/TestStatistics/: CTestTestfile.cmake  Makefile  cmake_install.cmake  run.sh  test_statistics
MyProject/: CMakeLists.txt
MyProject/MyProject/: CMakeLists.txt
MyProject/MyProject/Source/: MyProjectCallers.h
MyProject/TestMyProject/: CMakeLists.txt
Projects/: CMakeLists.txt
Projects/AILib/: CMakeLists.txt
Projects/AILib/Cluster/: CMakeLists.txt
Projects/AILib/Cluster/Cluster_2_0/: CMakeLists.txt
Projects/AILib/Cluster/Cluster_2_0/Source/: Cluster.hpp  ClusterLibCallers.cpp  ClusterLibCallers.h  main.cpp
Projects/AILib/Cluster/TestCluster/: CMakeLists.txt  run.sh
Projects/AILib/Cluster/TestCluster/Source/: CommandLineOptions.h  main.cpp
Projects/AILib/Genetics/: CMakeLists.txt
Projects/AILib/Genetics/Genetics_3_0/TestGenetics/: CMakeLists.txt  output_put_genetic.txt
Projects/AILib/Genetics/Genetics_3_0/TestGenetics/Source/: CommandLineOptions.h  main.cpp
Projects/AILib/Genetics/Genetics_3_0/TestGenetics/Structures/: GeneticTemplate.dot  GeneticTemplate.ps  output_put_genetic.dot
Projects/AILib/NeuralNetworks/: CMakeLists.txt
Projects/AILib/NeuralNetworks/NeuralNetwork/NeuralAlgorithms/: CMakeLists.txt
Projects/AILib/NeuralNetworks/NeuralNetwork/NeuralAlgorithms/Source/: NeuralAlgorithmsCallers.cpp  NeuralAlgorithmsCallers.h  main.cpp
Projects/AILib/NeuralNetworks/NeuralNetwork/NeuralNetwork/: CMakeLists.txt
Projects/AILib/NeuralNetworks/NeuralNetwork/NeuralNetwork/Source/: NeuralCallers.cpp  NeuralCallers.h  NeuralUnit.hpp  main.cpp
Projects/MathLib/: CMakeLists.txt
Projects/MathLib/Fourier/TestFourier/: CMakeLists.txt
Projects/MathLib/Fourier/TestFourier/Data/: fourier_sine.txt
Projects/MathLib/Fourier/TestFourier/Source/: CommandLineOptions.h  main.cpp
Projects/MathLib/Matrix/Matrix/: CMakeLists.txt
Projects/MathLib/Matrix/Matrix/Source/: Matrix.hpp  MatrixCallers.cpp  MatrixCallers.h  MatrixFunctionality.hpp  main.cpp
Projects/MathLib/Matrix/TestMatrix/: CMakeLists.txt  run.sh
Projects/MathLib/Matrix/TestMatrix/Source/: CommandLineOptions.h  main.cpp
Projects/MathLib/Metrics/TestMetrics/: CMakeLists.txt  run.sh
Projects/MathLib/Metrics/TestMetrics/Data/: data.txt  entropy_test1.txt  entropy_test2.txt
Projects/MathLib/Metrics/TestMetrics/Source/: CommandLineOptions.h  main.cpp
Projects/MathLib/Random/TestRandom/: CMakeLists.txt
Projects/MathLib/Random/TestRandom/Source/: CommandLineOptions.h  main.cpp
Projects/MathLib/Statistics/TestStatistics/: CMakeLists.txt
Projects/MathLib/Statistics/TestStatistics/Source/: CommandLineOptions.h  main.cpp
Projects/MyProject/: CMakeLists.txt
Projects/MyProject/MyProject/: CMakeLists.txt
Projects/MyProject/TestMyProject/: CMakeLists.txt  (+1 more)
Projects/Utility/: CMakeLists.txt
Projects/Utility/TestUtility/: CMakeLists.txt  run.sh
Projects/Utility/TestUtility/Source/: CommandLineOptions.h  main.cpp
Projects/Utility/Utility/: CMakeLists.txt
Projects/Utility/Utility/Source/: CommandLineParser.hpp  Exceptions.hpp  Iostream2.cpp  Iostream2.h  MemoryAllocationMacros.h  Parser.cpp  Parser.h  Preprocessor.hpp  PreprocessorMacros.h  UtilityCallers.cpp  UtilityCallers.h  main.cpp
Utility/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Utility/TestUtility/: CTestTestfile.cmake  Makefile  \  cmake_install.cmake  test_utility
Utility/Timing/: Timing.h
Utility/Utility/: Makefile  cmake_install.cmake
(+107 files in other folders)
